imported featherIcons and cleaned up astro config to utilize them.

--- a/src/pages/Notebook.astro
+++ b/src/pages/Notebook.astro
@@ -1,9 +1,9 @@
 ---
  import '../styles/global.css'
  import NotebookLayout from '../layouts/NoteLayout.astro'
- import Index from '../components/Notebook/index.astro'
+ import NoteUI from '../components/Notebook/index.astro'
 ---
 
 <NotebookLayout>
-	<Index/>
+	<NoteUI/>
 </NotebookLayout>
