Empty state for menu UI created. Updated font to space grotesk

--- a/src/components/Notebook/index.astro
+++ b/src/components/Notebook/index.astro
@@ -2,6 +2,6 @@
 import NoteMenu from "./Menu/NoteMenu";
 ---
 
-<div class = "flex flex-row w-full">
+<div class = "flex flex-row w-full h-full">
     <NoteMenu/>
 </div>
