--- a/src/layouts/NoteLayout.astro
+++ b/src/layouts/NoteLayout.astro
@@ -1,5 +1,6 @@
 ---
  import '../styles/global.css'
+ import '@fontsource/space-grotesk';
 ---
 
 <html lang="en">
@@ -11,7 +12,7 @@
 		<meta name="generator" content={Astro.generator} />
 		<title>Asterisk Notes</title>
 	</head>
-	<body>
+	<body class = "h-screen">
 		<slot />
 	</body>
 </html>
