Empty state created for noteArea

--- a/src/components/Notebook/index.astro
+++ b/src/components/Notebook/index.astro
@@ -1,7 +1,9 @@
 ---
 import NoteMenu from "./Menu/NoteMenu";
+import NoteArea from "./NoteArea/NoteArea";
 ---
 
 <div class = "flex flex-row w-full h-full">
     <NoteMenu/>
+    <NoteArea/>
 </div>
