Hooked up provider to the notebook components.

--- a/src/pages/Notebook.astro
+++ b/src/pages/Notebook.astro
@@ -1,7 +1,7 @@
 ---
  import '../styles/global.css'
  import NotebookLayout from '../layouts/NoteLayout.astro'
- import NoteUI from '../components/Notebook/index.astro'
+ import NoteUI from '../components/Notebook/index.tsx'
 ---
 
 <NotebookLayout>
