Refactored Note Area component by splitting them up into two states and creating each state's corresponding components.

--- a/src/pages/Notebook.astro
+++ b/src/pages/Notebook.astro
@@ -1,9 +1,9 @@
 ---
  import '../styles/global.css'
  import NotebookLayout from '../layouts/NoteLayout.astro'
- import NoteUI from '../components/Notebook/index.tsx'
+ import NoteUI from '../components/Notebook/index'
 ---
 
 <NotebookLayout>
-	<NoteUI/>
+	<NoteUI client:load/>
 </NotebookLayout>
